src/snapshots/betterletter__iteration__tests__[] true .snap
---
source: src/iteration.rs
expression: result
info:
  collection: []
  include_empty_set: true
---
- []

