src/snapshots/betterletter__iteration__tests__[_1,_2,_] true .snap
---
source: src/iteration.rs
expression: result
info:
  collection:
    - 1
    - 2
  include_empty_set: true
---
- []
- - 1
- - 2
- - 1
  - 2

