src/snapshots/betterletter__iteration__tests__[_1,_] false .snap
---
source: src/iteration.rs
expression: result
info:
  collection:
    - 1
  include_empty_set: false
---
- - 1

