src/snapshots/betterletter__iteration__tests__test_power_set-[]-false.snap
---
source: src/iteration.rs
expression: result
info:
  collection: []
  include_empty_set: false
---
[]

