src/snapshots/betterletter__iteration__tests__test_power_set-[_1,_]-true.snap
---
source: src/iteration.rs
expression: result
info:
  collection:
    - 1
  include_empty_set: true
---
- []
- - 1

